Tekstien marginia lisää, Osioiden gappia lisää, pääotsikko, metatietojuttuja

--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Squeal­ers is a rock ’n’ roll band from Jy­väs­ky­­lä, Finland. Our focus is on writing tight, riff-driven rock music.
+
+Heavily influenced by AC/DC, we mix in covers with original compositions in our live show."
+    />
     <title>Squealers</title>
     <link rel="icon" href="/src/favicon.ico" />
     <link rel="stylesheet" href="style.css" />
@@ -85,6 +91,7 @@
 
       <!-- About band -->
       <section class="mainblock flex-col gap-10px">
+        <h1>SQUEALERS</h1>
         <p>
           Squeal&shy;ers is a rock ’n’ roll band from Jy&shy;väs&shy;ky­&shy;lä,
           Finland. Our focus is on writing tight, riff-driven rock music.
