--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Squeal­ers is a rock ’n’ roll band from Jy­väs­ky­­lä, Finland. Our focus is on writing tight, riff-driven rock music.
-
-Heavily influenced by AC/DC, we mix in covers with original compositions in our live show."
+      content="Squeal­ers is a rock ’n’ roll band from Jy­väs­ky­­lä, Finland. Our focus is on writing tight, riff-driven rock music. Heavily influenced by AC/DC."
     />
-    <title>Squealers</title>
+    <title>Rock 'n' Roll band from Jyväskylä | SquealersBand.com</title>
     <link rel="icon" href="/src/favicon.ico" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="canonical" href="https://squealersband.com" />
   </head>
   <body>
     <main class="main flex-col flex-center gap-10px">
@@ -91,7 +90,7 @@ Heavily influenced by AC/DC, we mix in covers with original compositions in our 
 
       <!-- About band -->
       <section class="mainblock flex-col gap-10px">
-        <h1>SQUEALERS</h1>
+        <h1>SQUEALERS | Rock 'n' Roll band</h1>
         <p>
           Squeal&shy;ers is a rock ’n’ roll band from Jy&shy;väs&shy;ky­&shy;lä,
           Finland. Our focus is on writing tight, riff-driven rock music.
