Otsikoiden muuttamista ja tubevideon aloituskohta eri

--- a/index.html
+++ b/index.html
@@ -164,9 +164,10 @@
 
       <!-- YouTube embed -->
       <section class="mainblock flex-col flex-center">
+        <h3>Squealers - Big Dog @ Live at Kramsu</h3>
         <iframe
           class="embedtube"
-          src="https://www.youtube.com/embed/Q9aPLqheBC8?si=1_wrtBaKK0HkxwuZ&amp;start=178"
+          src="https://www.youtube.com/embed/Q9aPLqheBC8?si=1_wrtBaKK0HkxwuZ&amp;start=101"
           title="YouTube video player"
           frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
