backgroun osio ja webp banneri

--- a/index.html
+++ b/index.html
@@ -72,7 +72,11 @@
     <main class="main flex-col flex-center gap-10px">
       <!-- Logo & slogan -->
       <section class="mainblock line flex-col flex-center">
-        <img class="logo" alt="Squealers band logo" src="./src/kollaasi.png" />
+        <picture>
+          <source srcset="./src/kollaasi.webp" type="image/webp" />
+          <img src="./src/kollaasi.png" alt="Squealers band logo" /> </picture
+        ><!-- 
+        <img class="logo" alt="Squealers band logo" src="./src/kollaasi.png" /> -->
         <small>Solid rock 'n' roll, played right and loud</small>
       </section>
 
@@ -175,6 +179,32 @@
           allowfullscreen
         >
         </iframe>
+      </section>
+
+      <!-- Background -->
+      <section class="mainblock flex-col gap-10px">
+        <h3>Background</h3>
+        <p>
+          Squealers was founded in 2017, originally as a loosely defined two-man
+          tribute to AC/DC. Founding members Tuukka Pitkänen and Veikko Hoffman
+          released the band’s first EP, Rock Your Balls Out, in 2021. Consisting
+          of three AC/DC covers and one original composition, this project was
+          followed by the
+          <a
+            href="https://open.spotify.com/album/33G8kc6MfbVMmQjSMeRqzt?si=P8yJHLkkRfiCZ8_UCiElHA"
+            >Big Dog EP (2023)</a
+          >, taking the direction of original rock ’n’ roll music inspired by
+          AC/DC.
+        </p>
+        <p>
+          In 2024, Squealers evolved from a duo into a full-fledged band, with
+          the addition of members Jukka, Taneli and Antti. As of 2025, the band
+          has played a handful of
+          <a href="https://www.instagram.com/squealers_band/">gigs</a> in
+          Jyväskylä, with the set lists combining AC/DC covers and Squealers
+          originals. An album of original music is in the works, so it’s safe to
+          say that the full story of Squealers is only beginning.
+        </p>
       </section>
 
       <!-- Footer -->
