Animaatio skripti rikkoi linkit, ei riko enää

--- a/index.html
+++ b/index.html
@@ -160,9 +160,10 @@
           we mix in covers with original compositions in our live show.
         </p>
         <p>
-          <a href="#streaming-links">Stream</a> our original music and
-          <a href="#social-links">follow us</a> for the latest shows and
-          updates.
+          <a href="#streaming-links" class="internal-link">Stream</a> our
+          original music and
+          <a href="#social-links" class="internal-link">follow us</a> for the
+          latest shows and updates.
         </p>
       </section>
 
@@ -170,6 +171,7 @@
       <section class="mainblock flex-col flex-center">
         <h3>Squealers - Big Dog @ Live at Kramsu</h3>
         <iframe
+          loading="lazy"
           class="embedtube"
           src="https://www.youtube.com/embed/Q9aPLqheBC8?si=1_wrtBaKK0HkxwuZ&amp;start=101"
           title="YouTube video player"
@@ -209,7 +211,7 @@
 
       <!-- Footer -->
       <footer class="mainblock flex-col flex-center gap-10px">
-        <a href="#top"
+        <a href="#top" class="internal-link"
           ><img
             class="footerlogo"
             src="./src/squealers_logo.svg"
