--- a/index.html
+++ b/index.html
@@ -66,17 +66,67 @@
         ]
       }
     </script>
-    <script src="reset_animation.js"></script>
+    <script src="script.js"></script>
   </head>
   <body>
     <main class="main flex-col flex-center gap-10px">
       <!-- Logo & slogan -->
+      <style>
+        .image-wrapper {
+          position: relative;
+          width: 100%;
+        }
+
+        .image-wrapper picture {
+          display: block;
+          width: 100%;
+        }
+
+        .image-wrapper img {
+          width: 100%;
+          height: auto;
+          display: block;
+          transition: opacity 0.6s ease;
+        }
+
+        .full {
+          position: absolute;
+          inset: 0;
+          opacity: 0;
+        }
+
+        .full.loaded {
+          opacity: 1;
+        }
+      </style>
       <section class="mainblock line flex-col flex-center">
-        <picture>
-          <source srcset="./src/kollaasi.webp" type="image/webp" />
-          <img src="./src/kollaasi.png" alt="Squealers band logo" /> </picture
-        ><!-- 
-        <img class="logo" alt="Squealers band logo" src="./src/kollaasi.png" /> -->
+        <div class="image-wrapper">
+          <!-- Pieni placeholder näkyy ensin -->
+          <picture class="placeholder">
+            <source
+              srcset="./src/kollaasi_placeholder.webp"
+              type="image/webp"
+            />
+            <img
+              src="./src/kollaasi_placeholder.png"
+              alt="Squealers band logo placeholder"
+              width="5103"
+              height="2824"
+              loading="lazy"
+            />
+          </picture>
+
+          <!-- Täysikokoinen kuva ladattuna taustalla -->
+          <picture class="full">
+            <source srcset="./src/kollaasi.webp" type="image/webp" />
+            <img
+              src="./src/kollaasi.png"
+              alt="Squealers band logo full"
+              width="5103"
+              height="2824"
+            />
+          </picture>
+        </div>
         <small>Solid rock 'n' roll, played right and loud</small>
       </section>
 
@@ -89,41 +139,47 @@
               <a
                 href="https://open.spotify.com/artist/20bTE7abvp3MvSm3nf7lsR"
                 class="callbutton"
-                ><img src="./src/spotify-min.png" alt="Spotify" />Spotify</a
+                ><img
+                  src="./src/ikonit/spotify-min.png"
+                  alt="Spotify"
+                />Spotify</a
               >
             </li>
             <li>
               <a
                 href="https://music.apple.com/us/artist/squealers/1652739782"
                 class="callbutton"
-                ><img src="./src/itunes-min.png" alt="Apple Music" />Apple
-                Music</a
+                ><img
+                  src="./src/ikonit/itunes-min.png"
+                  alt="Apple Music"
+                />Apple Music</a
               >
             </li>
             <li>
               <a
                 href="https://www.youtube.com/@Squealers_band"
                 class="callbutton"
-                ><img src="./src/tube-min.png" alt="YouTube" />YouTube</a
+                ><img src="./src/ikonit/tube-min.png" alt="YouTube" />YouTube</a
               >
             </li>
             <li>
               <a
                 href="https://www.deezer.com/en/artist/188899167"
                 class="callbutton"
-                ><img src="./src/deezer-min.png" alt="Deezer" />Deezer</a
+                ><img src="./src/ikonit/deezer-min.png" alt="Deezer" />Deezer</a
               >
             </li>
             <li>
               <a href="https://tidal.com/artist/35359610" class="callbutton"
-                ><img src="./src/tidal-min.png" alt="Tidal" />Tidal</a
+                ><img src="./src/ikonit/tidal-min.png" alt="Tidal" />Tidal</a
               >
             </li>
             <li>
               <a
                 href="https://music.amazon.com/artists/B0BLB4RZ4M/squealers"
                 class="callbutton"
-                ><img src="./src/amazon-min.png" alt="Amazon" />Amazon Music</a
+                ><img src="./src/ikonit/amazon-min.png" alt="Amazon" />Amazon
+                Music</a
               >
             </li>
           </ul>
@@ -134,14 +190,17 @@
               <a
                 href="https://www.instagram.com/squealers_band/"
                 class="callbutton"
-                ><img src="./src/ig-min.png" alt="Instagram" />Instagram</a
+                ><img
+                  src="./src/ikonit/ig-min.png"
+                  alt="Instagram"
+                />Instagram</a
               >
             </li>
             <li>
               <a
                 href="https://www.facebook.com/profile.php?id=100087154827305"
                 class="callbutton"
-                ><img src="./src/fb-min.png" alt="Facebook" />Facebook</a
+                ><img src="./src/ikonit/fb-min.png" alt="Facebook" />Facebook</a
               >
             </li>
           </ul>
@@ -226,27 +285,27 @@
         <ul class="bottomicons flex gap-5">
           <li>
             <a href="https://open.spotify.com/artist/20bTE7abvp3MvSm3nf7lsR"
-              ><img src="./src/spotify-min.png" alt="Spotify"
+              ><img src="./src/ikonit/spotify-min.png" alt="Spotify"
             /></a>
           </li>
           <li>
             <a href="https://music.apple.com/us/artist/squealers/1652739782"
-              ><img src="./src/itunes-min.png" alt="Apple Music"
+              ><img src="./src/ikonit/itunes-min.png" alt="Apple Music"
             /></a>
           </li>
           <li>
             <a href="https://www.youtube.com/@Squealers_band"
-              ><img src="./src/tube-min.png" alt="YouTube"
+              ><img src="./src/ikonit/tube-min.png" alt="YouTube"
             /></a>
           </li>
           <li>
             <a href="https://www.instagram.com/squealers_band/"
-              ><img src="./src/ig-min.png" alt="Instagram"
+              ><img src="./src/ikonit/ig-min.png" alt="Instagram"
             /></a>
           </li>
           <li>
             <a href="https://www.facebook.com/profile.php?id=100087154827305"
-              ><img src="./src/fb-min.png" alt="Facebook"
+              ><img src="./src/ikonit/fb-min.png" alt="Facebook"
             /></a>
           </li>
         </ul>
