--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
     <link rel="icon" href="/src/favicon.ico" />
     <link
       rel="preload"
-      href="style.css"
+      href="docs/css/style.css"
       as="style"
       onload="this.rel='stylesheet'"
     />
-    <noscript><link rel="stylesheet" href="style.css" /></noscript>
+
     <link rel="canonical" href="https://squealersband.com" />
+    <link rel="preload" href="src/kollaasi.webp" as="image" />
+    <link rel="preload" href="src/kollaasi.png" as="image" />
 
     <!-- Open Graph (Facebook, LinkedIn, WhatsApp) -->
     <meta
@@ -66,7 +68,7 @@
         ]
       }
     </script>
-    <script src="script.js"></script>
+    <script src="/docs/js/script.js"></script>
   </head>
   <body>
     <main class="main flex-col flex-center gap-10px">
