--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Squeal­ers is a rock ’n’ roll band from Jy­väs­ky­­lä, Finland. Heavily influenced by AC/DC, our focus is on writing tight, riff-driven rock music. Solid rock 'n' roll, played right and loud."
+      content="Squeal­ers is a rock ’n’ roll band from Jy­väs­ky­­lä, Finland. Heavily influenced by AC/DC, we focus on writing tight, riff-driven rock music."
     />
     <title>Rock 'n' Roll band from Jyväskylä | SquealersBand.com</title>
     <link rel="icon" href="/src/favicon.ico" />
