Linkkityylittelyä ja marginia

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <script src="/docs/js/script.js"></script>
   </head>
   <body>
-    <main class="main flex-col flex-center gap-10px">
+    <main class="main flex-col flex-center">
       <!-- Logo & slogan -->
       <style>
         .image-wrapper {
@@ -218,18 +218,20 @@
         </p>
         <p>
           Heavily influenced by <a href="https://www.acdc.com/home/">AC/DC</a>,
-          we mix in covers with original compositions in our live show.
+          we mix in covers with original compositions in our
+          <a href="#live-show" class="internal-link">live show</a>.
         </p>
         <p>
           <a href="#streaming-links" class="internal-link">Stream</a> our
           original music and
           <a href="#social-links" class="internal-link">follow us</a> for the
-          latest shows and updates.
+          latest shows and updates. Scroll down and
+          <a href="#background" class="internal-link">learn more!</a>
         </p>
       </section>
 
       <!-- YouTube embed -->
-      <section class="mainblock flex-col flex-center">
+      <section class="mainblock flex-col flex-center gap-10px" id="live-show">
         <h3>Squealers - Big Dog @ Live at Kramsu</h3>
         <iframe
           loading="lazy"
@@ -245,7 +247,7 @@
       </section>
 
       <!-- Background -->
-      <section class="mainblock flex-col gap-10px">
+      <section class="mainblock flex-col gap-10px" id="background">
         <h3>Background</h3>
         <p>
           Squealers was founded in 2017, originally as a loosely defined two-man
@@ -272,7 +274,7 @@
 
       <!-- Footer -->
       <footer class="mainblock flex-col flex-center gap-10px">
-        <a href="#top" class="internal-link"
+        <a href="#top"
           ><img
             class="footerlogo"
             src="./src/squealers_logo.svg"
