Remove 'SQUEALERS' from band title

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 
       <!-- About band -->
       <section class="mainblock flex-col gap-10px">
-        <h1>SQUEALERS | Rock 'n' Roll band</h1>
+        <h1>Rock 'n' Roll band</h1>
         <p>
           Squeal&shy;ers is a rock ’n’ roll band from Jy&shy;väs&shy;ky­&shy;lä,
           Finland. Our focus is on writing tight, riff-driven rock music.
