Correct YouTube link handle in index.html

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             </li>
             <li>
               <a
-                href="https://www.youtube.com/@Squealers_band"
+                href="https://www.youtube.com/@squealersband"
                 class="callbutton"
                 ><img src="./src/ikonit/tube-min.png" alt="YouTube" />YouTube</a
               >
@@ -298,7 +298,7 @@
             /></a>
           </li>
           <li>
-            <a href="https://www.youtube.com/@Squealers_band"
+            <a href="https://www.youtube.com/@squealersband"
               ><img src="./src/ikonit/tube-min.png" alt="YouTube"
             /></a>
           </li>
